k8s resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: flask
        image:  noureddined123/flaskapp1:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: flask
        image:  noureddined123/flaskapp2:latest
        ports:
        - containerPort: 5001
