k8s resources/serviceapp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
